# openai-agents-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.factory/: init.sh  services.yaml
.factory/research/: python-main-parity.md  validation-readiness.md  workspace-analysis.md
crates/agents-core/: Cargo.toml
crates/agents-extensions/: Cargo.toml
crates/agents-extensions/src/: lib.rs
crates/agents-extensions/src/extensions/: __init__.rs  handoff_filters.rs  handoff_prompt.rs  realtime_transports.rs  tool_output_trimmer.rs  visualization.rs
crates/agents-extensions/src/extensions/experimental/: __init__.rs
crates/agents-extensions/src/extensions/experimental/codex/: __init__.rs  codex.rs  codex_options.rs  codex_tool.rs  events.rs  exec.rs  items.rs  output_schema_file.rs  payloads.rs  thread.rs  thread_options.rs  turn_options.rs
crates/agents-extensions/src/memory/: __init__.rs  advanced_sqlite_session.rs  async_sqlite_session.rs  dapr_session.rs  database_session.rs  encrypted_session.rs  redis_session.rs
crates/agents-extensions/src/providers/: __init__.rs  any_llm_model.rs  any_llm_provider.rs  litellm_model.rs  litellm_provider.rs
crates/agents-extensions/src/sandbox/: __init__.rs
crates/agents-openai/: Cargo.toml
crates/agents-realtime/: Cargo.toml  README.md
crates/agents-voice/: Cargo.toml
crates/openai-agents/: Cargo.toml
crates/openai-agents/examples/: basic_run.rs  memory_session.rs  realtime_session.rs  streamed_run.rs  voice_pipeline.rs
crates/openai-agents/src/: lib.rs
crates/openai-agents/tests/: behavior_parity.rs  docs_contract.rs  extensions_semantics.rs  mcp_semantics.rs  openai_session_semantics.rs  realtime_semantics.rs  root_export_parity.rs  runner_semantics.rs  sandbox_hosted_provider_semantics.rs  sandbox_semantics.rs  voice_semantics.rs
docs/: BEHAVIOR_PARITY.md  PORTING_MATRIX.md  PORTING_PI_ID.md  README.md  ROOT_EXPORT_PARITY.md  agents.md  behavior_parity_overrides.json  config.md  context.md  examples.md  guardrails.md  handoffs.md  human_in_the_loop.md  index.md  llms-full.txt  llms.txt  mcp.md  multi_agent.md  quickstart.md  release.md  repl.md  results.md  running_agents.md  streaming.md  tools.md  tracing.md  usage.md  visualization.md
docs/models/: README.md  openai.md  providers.md  settings.md
docs/realtime/: README.md  audio.md  events.md  transports.md
docs/ref/: README.md  openai.md  realtime.md  runtime.md  voice.md
docs/scripts/: check_links.sh  generate_llms_exports.sh
docs/sessions/: README.md  memory.md  openai.md
docs/stylesheets/: docs.css
examples/: README.md
scripts/: generate_behavior_parity.py  generate_porting_docs.py
(+189 files in other folders)
