[package]
name = "agents-extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
agents-core = { path = "../agents-core" }
agents-openai = { path = "../agents-openai" }
agents-realtime = { path = "../agents-realtime" }
async-trait.workspace = true
base64.workspace = true
redis.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
