[package]
name = "agents-extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Optional transports, adapters, memory backends, and integrations for openai-agents-rust."
repository = "https://github.com/scalarian/openai-agents-rust"
homepage = "https://github.com/scalarian/openai-agents-rust"
readme = "../../README.md"
keywords = ["agents", "openai", "extensions", "realtime", "integrations"]
categories = ["asynchronous", "api-bindings", "development-tools"]

[dependencies]
agents-core = { version = "0.1.2", path = "../agents-core" }
agents-openai = { version = "0.1.2", path = "../agents-openai" }
agents-realtime = { version = "0.1.2", path = "../agents-realtime" }
async-trait.workspace = true
base64.workspace = true
redis.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
