[package]
name = "openai-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Rust-native agents runtime with OpenAI, MCP, realtime, voice, and extensions."
repository = "https://github.com/scalarian/openai-agents-rust"
homepage = "https://github.com/scalarian/openai-agents-rust"
readme = "../../README.md"
keywords = ["agents", "openai", "llm", "realtime", "mcp"]
categories = ["asynchronous", "api-bindings", "development-tools"]

[dependencies]
agents-core = { path = "../agents-core" }
agents-extensions = { path = "../agents-extensions" }
agents-openai = { path = "../agents-openai" }
agents-realtime = { path = "../agents-realtime" }
agents-voice = { path = "../agents-voice" }
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
